--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# noDoot Specific
+config.py
+logs/
+img/psd_files
+verifiedusers.txt
+
+# VSCode
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
